commit before pushin

--- a/war/LibraryLocator.css
+++ b/war/LibraryLocator.css
@@ -42,7 +42,7 @@ background-attachment: fixed;  */
 	 outline: 5px solid #E7F3FF;
 	background: #E7F3FF; 
 	margin: 10px;
-  color: white;
+  color: lightblue;
 }
  
 /* the tab panel itself*/
