--- a/war/LibraryLocator.css
+++ b/war/LibraryLocator.css
@@ -1,110 +1,109 @@
 /** Add css rules here for your application. */
-
-
 /** Example rules used by the template application (remove for your app) */
- 
-
- header, section, footer,
-aside, nav, article, figure {
+header,section,footer,aside,nav,article,figure {
 	display: block;
-} 
-
-h1 {
-  font-size: 2em;
-  font-weight: bold;
-  color: #777777;
-  margin: 40px 0px 70px;
-  text-align: center;
 }
 
+h1 {
+	font-size: 2em;
+	font-weight: bold;
+	color: #777777;
+	margin: 40px 0px 70px;
+	text-align: center;
+}
 
 ul {
 	list-style: outside disc;
 	margin: 1em 0 1.5em 1.5em;
 }
- 
+
 /* Anchors */
-a {outline: 0;}
-a img {border: 0px; text-decoration: none;}
-a:link, a:visited {
+a {
+	outline: 0;
+}
+
+a img {
+	border: 0px;
+	text-decoration: none;
+}
+
+a:link,a:visited {
 	color: #C74350;
 	padding: 0 1px;
 	text-decoration: underline;
 }
-a:hover, a:active {
+
+a:hover,a:active {
 	background-color: #C74350;
 	color: #fff;
 	text-decoration: none;
 	text-shadow: 1px 1px 1px #333;
 }
 
-hidden{
-	visibility:hidden;
+hidden {
+	visibility: hidden;
 }
 
-
 body {
-/* background-image: url(IMG_2867.JPG); You will specify your image path here.
+	/* background-image: url(IMG_2867.JPG); You will specify your image path here.
 -moz-background-size: cover;
 -webkit-background-size: cover;
 background-size: cover;
 background-position: top center !important;
 background-repeat: no-repeat !important;
 background-attachment: fixed;  */
-
-
-}
-
- 
-/* the tab panel itself*/
-.scrollPanel{
-	text-align: center;
-	background-color:#fff;
-}
-.tabPanel{
-	text-align: center;
-	background-color: #093570;
 	
 }
 
+/* the tab panel itself*/
+.scrollPanel {
+	text-align: center;
+	background-color: #fff;
+}
+
+.tabPanel {
+	text-align: center;
+	background-color: #093570;
+}
+
 /* the main tab bottom part*/
-.mainTab{
+.mainTab {
 	width: 400px;
-/* 	margin:0px 0px 300px; */
+	/* 	margin:0px 0px 300px; */
 }
 
-.submit{
+.submit {
 	color: white;
-            border-radius: 4px;
-            text-shadow: 0 1px 1px rgba(0, 0, 0, 0.2);
+	border-radius: 4px;
+	text-shadow: 0 1px 1px rgba(0, 0, 0, 0.2);
 	background: rgb(66, 184, 221);
 }
 
-.submitt{
+.submitt {
 	color: white;
-            border-radius: 4px;
-            text-shadow: 0 1px 1px rgba(0, 0, 0, 0.2);
+	border-radius: 4px;
+	text-shadow: 0 1px 1px rgba(0, 0, 0, 0.2);
 	background: rgb(66, 184, 221);
 }
 
-.orange{
+.orange {
 	color: white;
-            border-radius: 4px;
-            text-shadow: 0 1px 1px rgba(0, 0, 0, 0.2);
+	border-radius: 4px;
+	text-shadow: 0 1px 1px rgba(0, 0, 0, 0.2);
 	background: rgb(223, 117, 20);
 }
 
-.maroon{
+.maroon {
 	color: white;
-            border-radius: 4px;
-            text-shadow: 0 1px 1px rgba(0, 0, 0, 0.2);
+	border-radius: 4px;
+	text-shadow: 0 1px 1px rgba(0, 0, 0, 0.2);
 	background: rgb(202, 60, 60);
 }
 
-.green{
+.green {
 	color: white;
-            border-radius: 4px;
-            text-shadow: 0 1px 1px rgba(0, 0, 0, 0.2);
+	border-radius: 4px;
+	text-shadow: 0 1px 1px rgba(0, 0, 0, 0.2);
 	background: rgb(28, 184, 65);
 }
 
@@ -112,190 +111,217 @@ background-attachment: fixed;  */
 /*   display: block; */
 /*   font-size: 16pt; */
 /* } */
-
-/* /** Most GWT widgets already have a style name defined */ */
-/* .gwt-DialogBox { */
-/*   width: 400px; */
-/* } */
-
-/* .dialogVPanel { */
-/*   margin: 5px; */
-/* } */
-
-/* .serverResponseLabelError { */
-/*   color: red; */
-/* } */
-
-/* /** Set ids using widget.getElement().setId("idOfElement") */ */
-/* #closeButton { */
-/*   margin: 15px 6px 6px; */
-/* } */
+/* /** Most GWT widgets already have a style name defined */
+* /
+	/* .gwt-DialogBox { */ /*   width: 400px; */ /* } */
+	/* .dialogVPanel { */ /*   margin: 5px; */ /* } */
+	/* .serverResponseLabelError { */ /*   color: red; */ /* } */
+	/* /** Set ids using widget.getElement().setId("idOfElement") */ * /
+	/* #closeButton { */ /*   margin: 15px 6px 6px; */ /* } */  
 
 
 #banner {
 	margin: 0 auto;
 	padding: 2.5em 0 0 0;
 }
- 
-	/* Banner */
-	#banner h1 {font-size: 3.571em; line-height: .6;}
-	#banner h1 a:link, #banner h1 a:visited {
-		color: #000305;
-		display: block;
-		font-weight: bold;
-		margin: 0 0 .6em .2em;
-		text-decoration: none;
-		width: 427px;
-		
-	}
-	#banner h1 a:hover, #banner h1 a:active {
-		background: none;
-		color: #e8a007; /* #C74350; */
-		text-shadow: none;
-	}
- 
-	#banner h1 strong {font-size: 0.36em; font-weight: normal;}
-	/* Main Nav */
-	#banner nav {
- 	background: #093570;
- 	   /* #E7F3FF; */
-       /*  background: #F4E3E3;  */
- 		font-size: 1.143em;
-		height: 40px;
-		line-height: 30px;
-		margin: 0 auto 2em auto;
-		padding: 0;
-		text-align: center;
-		width: 1440px;
-		border-radius: 5px;
-		-moz-border-radius: 5px;
-		-webkit-border-radius: 5px;
-	}
-	
-	#banner nav ul {list-style: none; margin: 0 auto; width: 1440px;}
-	#banner nav li {float: left; display: inline; margin: 0;}
-	
-	#banner nav a:link, #banner nav a:visited {
-		color: #fff;
-		display: inline-block;
-		height: 30px;
-		padding: 5px 1.5em;
-		text-decoration: none;
-	}
-	#banner nav a:hover, #banner nav a:active,
-	#banner nav .active a:link, #banner nav .active a:visited {
-		background: #e8a007;
-		color: #fff;
-		text-shadow: none !important;
-	}
-	
-	#banner nav li:first-child a {
-		border-top-left-radius: 5px;
-		-moz-border-radius-topleft: 5px;
-		-webkit-border-top-left-radius: 5px;
-		
-		border-bottom-left-radius: 5px;
-		-moz-border-radius-bottomleft: 5px;
-		-webkit-border-bottom-left-radius: 5px;
-	}
-	
+
+/* Banner */
+#banner h1 {
+	font-size: 3.571em;
+	line-height: .6;
+}
+
+#banner h1 a:link,#banner h1 a:visited {
+	color: #000305;
+	display: block;
+	font-weight: bold;
+	margin: 0 0 .6em .2em;
+	text-decoration: none;
+	width: 427px;
+}
+
+#banner h1 a:hover,#banner h1 a:active {
+	background: none;
+	color: #e8a007; /* #C74350; */
+	text-shadow: none;
+}
+
+#banner h1 strong {
+	font-size: 0.36em;
+	font-weight: normal;
+}
+/* Main Nav */
+#banner nav {
+	background: #093570;
+	/* #E7F3FF; */ /*  background: #F4E3E3;  */
+	font-size: 1.143em;
+	height: 40px;
+	line-height: 30px;
+	margin: 0 auto 2em auto;
+	padding: 0;
+	text-align: center;
+	width: 1440px;
+	border-radius: 5px;
+	-moz-border-radius: 5px;
+	-webkit-border-radius: 5px;
+}
+
+#banner nav ul {
+	list-style: none;
+	margin: 0 auto;
+	width: 1440px;
+}
+
+#banner nav li {
+	float: left;
+	display: inline;
+	margin: 0;
+}
+
+#banner nav a:link,#banner nav a:visited {
+	color: #fff;
+	display: inline-block;
+	height: 30px;
+	padding: 5px 1.5em;
+	text-decoration: none;
+}
+
+#banner nav a:hover,#banner nav a:active,#banner nav .active a:link,#banner nav .active a:visited
+	{
+	background: #e8a007;
+	color: #fff;
+	text-shadow: none !important;
+}
+
+#banner nav li:first-child a {
+	border-top-left-radius: 5px;
+	-moz-border-radius-topleft: 5px;
+	-webkit-border-top-left-radius: 5px;
+	border-bottom-left-radius: 5px;
+	-moz-border-radius-bottomleft: 5px;
+	-webkit-border-bottom-left-radius: 5px;
+}
+
+/*==========tabs and page and buttons==========*/
+.pagePanel {
+	margin: 10px 0px 15px;
+}
+
+.tabBar {
+	background: #fff;
+	border: 1px solid #ccc;
+	border-bottom-color: #ffffff;
+	color: black;
+	font-size: 120%;
+	height: 30px;
+	line-height: 28px;
+	margin-top: 3px;
+	padding: 0px 11px 0px 11px;
+}
+
 /* ==========tables============ */
 /* ===ui=== */
 .uiTableHeader {
-	background-color:#093570;
+	background-color: #093570;
 	color: white;
 	font-style: Verdana;
 }
 
-.uiTable{
+.uiTable {
 	border: 1px solid silver;
 	padding: 2px;
 	margin-bottom: 6px;
 }
 
-.uiTableName{
+.uiTableName {
 	text-align: left;
 	width: 200px
 }
 
-.uiTableBranch{
+.uiTableBranch {
 	text-align: left;
-    width: 100px
+	width: 100px
 }
 
-.selectButton{
+.selectButton {
 	text-align: center;
 	width: 10px;
 }
 
 /* ===admin=== */
-.adminTableHeader{
-	background-color:#940005;
+.adminTableHeader {
+	background-color: #940005;
 	color: white;
 	font-style: Verdana;
 }
 
-.adminTable{
+.adminTable {
 	border: 1px solid silver;
 	padding: 2px;
 	margin-bottom: 6px;
 	text-align: left;
 }
 
-
 /*     Map
 ****************/
-
 #map {
-height: 100%;
-  position: absolute; 
-  top: 0; 
-  bottom: -200px; 
-  left: 0; 
-  right: 0; 
-  z-index: 0;
+	height: 100%;
+	position: absolute;
+	top: 0;
+	bottom: -200px;
+	left: 0;
+	right: 0;
+	z-index: 0;
 }
- 
-#container { 
-/*   margin: 60px auto 0;
+
+#container {
+	/*   margin: 60px auto 0;
   padding: 10px;
   background: #fff;
   height: auto;
 opacity: .90; Set the opacity for a slightly transparent Google Form 
-   color: white; */
-/*    top: 100px;
+   color: white; */ /*    top: 100px;
    left: 0px; */
-  z-index: 100;
-  position: relative;
+	z-index: 100;
+	position: relative;
 }
- 
 
+#extras {
+	padding: 10px;
+	height: auto;
+	width: auto;
+	margin: 10px auto 0;
+}
 
-#extras { padding: 10px; height:auto; width:auto;margin:10px auto 0;
-  } 
-#extras ul {list-style: none; margin: 0;}
-#extras li {border-bottom: 1px solid #fff;}
+#extras ul {
+	list-style: none;
+	margin: 0;
+}
+
+#extras li {
+	border-bottom: 1px solid #fff;
+}
+
 #extras h2 {
-	
- 	color: #C74350;
- 	font-size: 1.429em;
+	color: #C74350;
+	font-size: 1.429em;
 	margin-bottom: .25em;
 	padding: 0 3px;
 }
- 
-#extras a:link, #extras a:visited {
+
+#extras a:link,#extras a:visited {
 	color: #444;
 	display: block;
 	border-bottom: 1px solid #F4E3E3;
 	text-decoration: none;
 	padding: .3em .25em;
 }
- 
+
 /* Social */
-	#extras .social {
-		float: left;
-		width: 175px;
-	}
+#extras .social {
+	float: left;
+	width: 175px;
+}
 /*  
  #content {
 	 background: #fff; 
@@ -310,22 +336,26 @@ opacity: .90; Set the opacity for a slightly transparent Google Form
 	z-index: 0;
 	position:relative;
 } */
-
 /*
 	Footer
 *****************/
-#contentinfo {padding-bottom: 2em; text-align: right;}
-
+#contentinfo {
+	padding-bottom: 2em;
+	text-align: right;
+}
 
 #extras div[class='social'] a {
 	background-repeat: no-repeat;
 	background-position: 3px 6px;
 	padding-left: 25px;
 }
- 
+
 /* Icons */
+.social a[href *='facebook.com'] {
+	background-image: url(facebook-icon.png);
+}
 
-.social a[href*='facebook.com'] {background-image: url(facebook-icon.png);}
-.social a[href*='twitter.com'] {background-image: url(icon-twitter.png);}
+.social a[href *='twitter.com'] {
+	background-image: url(icon-twitter.png);
+}
 /* .social a[href*='google.com'] {background-image: url(icon-twitter.png);} */
-
